# elog

./: README.md
example/: CMakeLists.txt  main.cpp
src/elog/: log.hpp  logger.cpp  logger.hpp  logger.tpp  record.cpp  record.hpp  record.tpp  severity.hpp
src/elog/appenders/: appender.cpp  appender.hpp  console_appender.cpp  console_appender.hpp  raw_appender.cpp  raw_appender.hpp
src/elog/formatters/: colored_formatter.cpp  colored_formatter.hpp  formatter.cpp  formatter.hpp  pattern_formatter.cpp  pattern_formatter.hpp  simple_formatter.cpp  simple_formatter.hpp
